--- a/home.html
+++ b/home.html
@@ -1,1 +1,85 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Claim 0.00001 DGB</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      width: 320px;
+      text-align: center;
+    }
+    input[type="email"] {
+      width: 90%;
+      padding: 10px;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    button {
+      background-color: #28a745;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover {
+      background-color: #218838;
+    }
+    #result {
+      margin-top: 1rem;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h2>Claim 0.00001 DGB</h2>
+    <input type="email" id="email" placeholder="Enter your FaucetPay email">
+    <br>
+    <button onclick="claim()">Claim</button>
+    <p id="result"></p>
+  </div>
+
+  <script>
+    async function claim() {
+      const email = document.getElementById('email').value.trim();
+      if (!email) {
+        document.getElementById('result').innerText = 'Please enter your email.';
+        return;
+      }
+
+      document.getElementById('result').innerText = 'Processing…';
+
+      try {
+        const res = await fetch('https://pvfvplaufesdoqinuogn.supabase.co/functions/v1/claim-dgb', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email })
+        });
+
+        const data = await res.json();
+        // FaucetPay typically returns {status:200, message:"...", ...}
+        document.getElementById('result').innerText = data.message || JSON.stringify(data);
+      } catch (err) {
+        document.getElementById('result').innerText = 'Error: ' + err.message;
+      }
+    }
+  </script>
+</body>
+  </html>
